gitops/talos/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talos-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: openebs-system
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
