gitops/talos/hubble-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble
  namespace: cilium
spec:
  parentRefs:
    - name: gw-int
      namespace: platform-system
  hostnames:
    - "hubble.int.${domain}"
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
